# artemis

./: .coverage  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  start.sh
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 2603ecd55436_use_timezone_aware_timestamps.py  a1b2c3d4e5f6_add_is_system_to_api_keys.py  b2c3d4e5f6g7_add_app_logs_table.py  c3d4e5f6g7h8_add_supabase_id_to_users.py  d4e5f6g7h8i9_add_is_service_account_to_users.py  e5f6g7h8i9j0_add_is_platform_admin_to_users.py  ef8ad21fc17d_initial_postgresql_schema.py  f6g7h8i9j0k1_add_teams_and_services.py
app/: auth.py  config.py  jetta_sso.py  main.py  models.py
app/providers/: models.py  pricing.py
app/routers/: admin_api.py  agent_api.py  analytics.py  api_keys.py  api_v1_keys.py  auth_routes.py  chat.py  embeddings.py  groups.py  guide.py  health.py  logs.py  pages.py  provider_keys.py  proxy_routes.py  services.py  teams.py  whisper.py
app/services/: __init__.py  api_key_service.py  demo_data_service.py  encryption_validator.py  group_member_service.py  group_service.py  organization_service.py  provider_account_service.py  provider_health.py  provider_key_service.py  provider_model_service.py  provider_service.py  request_log_service.py
docs/: NAVIGATION.md  navigation.html
scripts/: add_v0_key.py  artemis  artemis-cli.py  fix_provider_keys.py  seed_data.py
tests/: __init__.py  conftest.py  test_admin.py  test_config.py  test_embeddings.py  test_health.py
(+41 files in other folders)
